kubernetes/vpro-app/vproappdep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels: 
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
       - name: vproapp
         image: tcollins520/vprofileapp:v4
         ports:
          - name: vproapp-port
            containerPort: 8080
         resources:
           requests:
             memory: "256Mi"
             cpu: "250m"
           limits:
             memory: "512Mi"
             cpu: "500m"
